[gd_scene load_steps=8 format=2]

[ext_resource path="res://Bullets/Slides/BChapter.gd" type="Script" id=1]
[ext_resource path="res://Bullets/fonts/ChapterTitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Bullets/fonts/ChapterNumberFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Bullets/fonts/ChapterSubTitleFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Bullets/img/bgwater.jpg" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.588235 ) ]
}

[node name="Chapter" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChapterTitle" type="RichTextLabel" parent="."]
margin_left = 757.0
margin_top = 673.0
margin_right = 1706.0
margin_bottom = 787.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[color=#ff000000][/color]"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChapterSubtitle" type="RichTextLabel" parent="."]
margin_left = 757.0
margin_top = 794.0
margin_right = 1644.0
margin_bottom = 935.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=#ff993366][/color]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChapterNumber" type="RichTextLabel" parent="."]
margin_left = 201.0
margin_top = 509.0
margin_right = 461.0
margin_bottom = 931.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#ffcd0f2d][/color]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 2 )
